--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-    "name": "SENG513-WebChatApp",
+    "name": "socket-chat-SENG513",
     "version": "0.0.1",
+    "description": "my first socket.io app",
     "dependencies": {
         "express": "^4.15.2",
-        "jquery": "^3.3.1",
-        "socket.io": "^2.0.4",
-        "socket.io-cookie-parser": "^1.0.0"
+        "socket.io": "^2.0.4"
     }
 }
